# polkadot_cosmos_integration

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  package.json  reset-all.sh  run.sh  rust-toolchain
.github/workflows/: ci.yml  docker.yml  publish.yml
.maintain/: README.md  docker-compose.yml  docker-testnet.yml  genesis.json  nginx.conf
.maintain/request/: package.json
abci-grpc/: README.md  docker-compose.yml  go.mod  go.sum
abci-grpc/proto/: abci.proto  token.proto
abci-grpc/src/abci/: abci.go  abci.pb.go  abci.pb.gw.go
abci-grpc/src/client/: client.go
abci-grpc/src/example/: example.go
abci-grpc/src/generate_tx/: generate_tx.go
abci-grpc/src/server/: server.go
abci-grpc/src/token/: toke_utils.go  token.go  token_crypt.go  token_structs.go  token_test.go
abci-grpc/src/token_crypt/: toke_crypt.go
abci-server/: README.md  go.mod  go.sum
abci-server/proto/: helloworld.proto
abci-server/src/: helloworld.pb.go  helloworld.pb.gw.go  main.go
babe/: Cargo.toml
babe/src/: benchmarking.rs  default_weights.rs  equivocation.rs  lib.rs  mock.rs  tests.rs
cosmos-abci/: Cargo.toml
cosmos-abci/abci/: Cargo.toml  build.rs
cosmos-abci/abci/proto/tendermint/types/: types.proto  validator.proto
cosmos-abci/abci/proto/tendermint/version/: types.proto
cosmos-abci/abci/src/: defaults.rs  grpc.rs  lib.rs  utils.rs
cosmos-abci/abci/src/grpc/: protos.rs
cosmos-abci/abci/tests/: abci_integration_test.rs  abci_unit_test.rs  integration_tests.rs  unit_tests.rs
cosmos-abci/abci_storage/: Cargo.toml
cosmos-abci/abci_storage/src/: lib.rs  rocksdb.rs
cosmos-abci/abci_storage/tests/: abci_storage_test.rs
cosmos-abci/src/: crypto_transform.rs  lib.rs  utils.rs
cosmos-abci/src/crypto_transform/: hashers.rs  ripe_hasher.rs  ripemd160_transform.rs  sha256_transform.rs  sha_hasher.rs
cosmos-abci/tests/: cosmos_abci_unit_test.rs  crypto_transform.rs  crypto_transform_test.rs  pallet_abci_test.rs
cosmos-app/: README.md  go.mod  go.sum
cosmos-app/app/: app.go
cosmos-app/cmd/nscli/: main.go
cosmos-app/cmd/nsd/: constructors.go  main.go  start.go  types.pb.go  types.pb.gw.go
cosmos-app/x/nameservice/: abci.go  alias.go  handler.go  module.go
grpc/: Cargo.toml  Makefile.toml  README.md  build.rs
grpc/grpc-client/: Cargo.toml
grpc/grpc-server/: Cargo.toml
grpc/proto/: abci.proto  helloworld.proto
grpc/src/abci/: client.rs  server.rs
grpc/src/helloworld/: client.rs  server.rs
json-rpc-server/: Cargo.toml  README.md
json-rpc-server/src/: main.rs  server.rs  types.rs
json-rpc-server/src/server/: types.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  lib.rs  service.rs
node/src/cosmos_rpc/: mod.rs  types.rs
node_testing_ui/: app.constants.js  block-info.app.js  get-validator-power.js  get-validators-count.app.js  get-validators.app.js  insert-cosmos-validator.app.js  package-lock.json  package.json  remove-cosmos-validator.app.js  tx-server.app.js  tx.app.js
node_testing_ui/baseapp/: README.md  package-lock.json  package.json
node_testing_ui/baseapp/public/: index.html
node_testing_ui/baseapp/src/: App.js
pallet-babe-forked/src/: lib.rs
pallets/abci/: Cargo.toml
pallets/abci/src/: lib.rs  mock.rs  tests.rs
pallets/cosmos-abci/: Cargo.toml
pallets/cosmos-abci/abci/: Cargo.toml
pallets/cosmos-abci/abci/src/: defaults.rs  grpc.rs  lib.rs  utils.rs
pallets/cosmos-abci/abci/src/grpc/: protos.rs
pallets/cosmos-abci/abci/tests/: abci_integration_test.rs  abci_test.rs  abci_unit_test.rs  integration_tests.rs  unit_tests.rs
pallets/cosmos-abci/src/: lib.rs  utils.rs
pallets/cosmos-abci/tests/: pallet_abci_test.rs
pallets/template/src/: lib.rs
polkadot-ui/: package-lock.json  package.json
runtime/: Cargo.toml
runtime-interface/pallets/template/: Cargo.toml
runtime/src/: lib.rs
scripts/: cosmos-init.sh  docker_run.sh
scripts/integration_tests/: README.md  basic_test.sh  basic_test_2_nodes.sh  batch_tests.sh  broadcast_tx.sh  cosmos_validator_rewards_test.sh  docker_test.sh  node_validators_sync.sh  node_validators_sync_2_nodes.sh  node_validators_sync_aura.sh  node_validators_sync_babe.sh  remove_cosmos_validators.sh  stoping_nodes_test.sh  sync_bug_test.sh  tx_spamming_test.sh
scripts/integration_tests/nodes_setup/: launch_alice_node.sh  launch_bob_node.sh  stop_bob_node.sh
scripts/integration_tests/testing_setup/: basic_setup.sh  test_utils.sh
scripts/integration_tests/validators_connection/: launch_alice_node.sh  launch_bob_node.sh  root.sh  stop_bob_node.sh
scripts/integration_tests/validators_updates/: root.sh
src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
src/cli/: commands.rs
src/cosmos_rpc/: mod.rs
substrate/: .dockerignore  Cargo.toml  README.md  docker-compose.yml
substrate/node/: Cargo.toml
substrate/node/src/: command.rs  cosmos_rpc.rs  main.rs  rpc.rs  service.rs
substrate/node/src/cosmos_rpc/: mod.rs  tx.rs
substrate/pallets/abci/: Cargo.toml  build.rs
substrate/pallets/abci-direct/: Cargo.toml
substrate/pallets/abci/proto/: abci.proto  types.proto
substrate/pallets/abci/src/: abci_grpc.rs  defaults.rs  lib.rs  mock.rs  std_logic.rs  tests.rs
substrate/pallets/cosmos-abci/: Cargo.toml
substrate/pallets/cosmos-abci/abci/: Cargo.toml
substrate/pallets/cosmos-abci/abci/src/: defaults.rs  lib.rs  protos.rs  test.rs
substrate/pallets/cosmos-abci/abci/tests/: abci_test.rs  integration_tests_abci.rs  integration_tests_abci_2.rs  unit_tests_abci.rs
substrate/pallets/cosmos-abci/src/: lib.rs  mock.rs  request.rs  test.rs  tests.rs
substrate/pallets/cosmos-abci/tests/: integration_tests.rs  integration_tests_cosmos_abci.rs  pallet_abci_test.rs
substrate/pallets/cosmos-rpc/: Cargo.toml
substrate/pallets/cosmos-rpc/src/: lib.rs  types.rs
substrate/runtime/: Cargo.toml
substrate/runtime/src/: lib.rs
substrate/scripts/: docker_run.sh  insert.sh  test_genesis.json
token/: Dockerfile  README.md  go.mod  go.sum
token/proto/: abci.proto  token.proto
(+42 files in other folders)
