[package]
name = "pallet-babe"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Consensus extension module for BABE consensus. Collects on-chain randomness from VRF outputs and manages epoch transitions."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-authorship = { version = "2.0.0", default-features = false }
pallet-session = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-application-crypto = { version = "2.0.0", default-features = false }
sp-consensus-babe = { version = "0.8.0", default-features = false }
sp-consensus-vrf = { version = "0.8.0", default-features = false }
sp-inherents = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-session = { version = "2.0.0", default-features = false }
sp-staking = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-timestamp = { version = "2.0.0", default-features = false }

[dev-dependencies]
frame-benchmarking = { version = "2.0.0" }
pallet-balances = { version = "2.0.0" }
pallet-offences = { version = "2.0.0" }
pallet-staking = { version = "2.0.0" }
pallet-staking-reward-curve = { version = "2.0.0" }
sp-core = { version = "2.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"serde",
	"sp-application-crypto/std",
	"sp-consensus-babe/std",
	"sp-consensus-vrf/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-timestamp/std",
]
runtime-benchmarks = ["frame-benchmarking"]
