[package]
name = 'pallet-cosmos-abci'
description = 'Pallet ABCI module with runtime interfaces'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
version = '2.0.0'

[dependencies]
pallet-abci = { path = 'abci', version = '0.1.0', optional = true }

codec = { package = 'parity-scale-codec', version = '1.3.0', features = ['derive'], default-features = false }
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
sp-api = { version = '2.0.0', default-features = false }
sp-runtime-interface = { version = '2.0.0', default-features = false }
alt_serde = { version = '1', default-features = false, features = ['derive'] }
parking_lot = { version = "0.10.0", optional = true }
lazy_static = '1.2.0'

[dev-dependencies]
testcontainers = '0.10'

[features]
default = ['std']
std = [
	'parking_lot',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-runtime-interface/std',
	'pallet-abci',
]
