[package]
name = 'pallet-cosmos-abci'
description = 'Pallet ABCI module with runtime interfaces'
edition = '2018'
authors = ['Adoriasoft team']
readme = '../README.md'
repository = 'https://github.com/adoriasoft/polkadot_cosmos_integration'
license = 'Apache-2.0'
version = '0.0.3'

[dependencies]
serde = { version = "1.0", optional = true }
abci-storage = { path = 'abci_storage', version = '0.0.3', optional = true}
pallet-abci = { path = 'abci', version = '0.0.3', optional = true }
pallet-session = { version = '2.0.0', features = ["historical" ], default-features = false }
pallet-sudo = { version = '2.0.0', default-features = false }
pallet-grandpa = { version = '2.0.0', default-features = false }
codec = { package = 'parity-scale-codec', version = '1.3.0', features = ['derive'], default-features = false }
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
sp-api = { version = '2.0.0', default-features = false }
sp-runtime-interface = { version = '2.0.0', default-features = false }
sp-application-crypto = { version = '2.0.0', default-features = false }
alt_serde = { version = '1', default-features = false, features = ['derive'] }
parking_lot = { version = "0.10.0", optional = true }
base64 = { version = '0.12.3', default-features = false, features = ["alloc"] }
hex = { version = '0.4.2', default-features = false }
ripemd160 = { version = "0.9.1", default-features = false }
sha2 = { version = "0.9.2", default-features = false }
lazy_static = '1.2.0'

[dev-dependencies]
testcontainers = '0.10'

[features]
default = ['std']
std = [
	'serde',
	'parking_lot',
	'codec/std',
	'pallet-grandpa/std',
	'pallet-session/std',
	'pallet-sudo/std',
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-api/std',
	'sp-application-crypto/std',
	'sp-runtime-interface/std',
	'pallet-abci',
	'abci-storage',
]
