[package]
name = "json-rpc-server"
version = "0.1.0"
authors = ["Mr-Leshiy <leshiy12345678@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
jsonrpc-http-server = { git = "https://github.com/enfipy/jsonrpc", rev = "4bca2c5186a873488d5fb989b28cb9c7225ec9c6" }
abci = { path = './abci', optional = true }

[features]
default = ['std']
std = [
	'abci',
]