[package]
name = 'node-template-runtime'
authors = ['AdoriaSoft']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '0.0.3'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }

# alias "parity-scale-code" to "codec"
codec = { package = 'parity-scale-codec', default-features = false, features = ['derive'], version = '1.3.4' }
# local dependencies
pallet-cosmos-abci = { path = '../cosmos-abci', default-features = false, version = '0.0.3' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
frame-executive = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '2.0.0' }
pallet-session = { default-features = false, version = '2.0.0', features = ['historical'] }
pallet-balances = { default-features = false, version = '2.0.0' }
pallet-grandpa = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
pallet-sudo = { default-features = false, version = '2.0.0' }
pallet-timestamp = { default-features = false, version = '2.0.0' }
pallet-transaction-payment = { default-features = false, version = '2.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.0' }
sp-api = { default-features = false, version = '2.0.0' }
sp-block-builder = { default-features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-inherents = { default-features = false, version = '2.0.0' }
sp-offchain = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-session = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-transaction-pool = { default-features = false, version = '2.0.0' }
sp-version = { default-features = false, version = '2.0.0' }
# Aura
pallet-aura = { default-features = false, version = '2.0.0', optional = true }
sp-consensus-aura = { default-features = false, version = '0.8.0', optional = true }
# Babe
# TODO Connect babe from registry https://github.com/maryjanyes/substrate.
pallet-babe = { default-features .feature/update-babe-weights= false, version = '2.0.0' }
sp-consensus-babe = { default-features = false, version = '0.8.0', optional = true }

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '2.0.0' }

[features]
default = ['std', 'babe']
aura = ['pallet-aura', 'sp-consensus-aura']
babe = ['sp-consensus-babe']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-session/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-cosmos-abci/std',
    'pallet-babe/std',
    'pallet-aura/std',
    'sp-consensus-babe/std',
]
