[package]
name = 'pallet-cosmos-abci'
description = 'Pallet ABCI module with runtime interfaces'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
version = '2.0.0-rc6'

[dependencies]
codec = { package = 'parity-scale-codec', version = '1.3.0', features = ['derive'], default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate.git', tag = "v2.0.0-rc6", features = ["historical" ], default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', tag = "v2.0.0-rc6", default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false }
sp-runtime-interface = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false }
alt_serde = { version = '1', default-features = false, features = ['derive'] }
parking_lot = { version = "0.10.0", optional = true }
lazy_static = '1.2.0'
abci = { path = './abci', optional = true }
isahc = { version = '0.9', optional = true }

[dev-dependencies]
testcontainers = '0.10'

[features]
default = ['std']
std = [
	'parking_lot',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-io/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-runtime-interface/std',
	'isahc',
	'abci',
]
