[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'Substrate node template'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc2'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.3.4'
log = '0.4.8'
parking_lot = '0.10.0'
structopt = '0.3.8'

node-template-runtime = { path = '../runtime' }

sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sc-cli = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sc-network = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sc-service = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }

reqwest = { version = "0.10", features = ["json", "blocking"] }
frame-support = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3', default-features = false }

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }

[[bin]]
name = 'node-template'
