[package]
name = 'abci'
description = 'Cosmos ABCI library to communicate with Cosmos Applications'
edition = '2018'
version = '0.1.0'

[dependencies]
serde = { version = '1.0', features = ['derive'] }
serde_json = { version = '1', default-features = false, git = 'https://github.com/Xanewok/json', branch = 'no-std', features = ['alloc'] }
tokio = { version = '0.2', features = ['rt-threaded', 'time', 'blocking'] }
tonic = { version = '0.3.0', features = ['tls'] }
prost = { version = '0.6' }
prost-types = '0.6'
lazy_static = '1.2.0'
owning_ref = '0.4.1'
mockall = '0.8.1'

[dev-dependencies]
testcontainers = '0.10'

[build-dependencies]
tonic-build = { version = '0.3.0', features = ['prost'] }
