[package]
name = 'pallet-abci'
description = 'FRAME pallet abci'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
version = '2.0.0-rc2'

[dependencies]
codec = { package = 'parity-scale-codec', version = '1.3.0', features = ['derive'], default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2', default-features = false }
lite-json = { version = "0.1", default-features = false }

[features]
default = ['std']
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"lite-json/std",
]
