[package]
name = 'pallet-cosmos-abci'
description = 'Pallet ABCI module with runtime interfaces'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
version = '2.0.0-rc3'

[dependencies]
codec = { package = 'parity-scale-codec', version = '1.3.0', features = ['derive'], default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3', default-features = false }
sp-runtime-interface = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3', default-features = false }
alt_serde = { version = '1', default-features = false, features = ['derive'] }
serde_json = { version = '1', default-features = false, git = 'https://github.com/Xanewok/json', branch = 'no-std', features = ['alloc'] }
isahc = { version = '0.9', optional = true }
abci = { path = './abci', optional = true }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-runtime-interface/std',
	'isahc',
	'abci',
]
