[package]
name = 'pallet-cosmos-rpc'
description = 'Cosmos RPC module'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
version = '2.0.0-rc3'

[dependencies]
base64 = '0.12.3'
serde = '1.0'
hex = '0.4.2'
serde_derive = '1.0'
jsonrpc-http-server = { git = 'https://github.com/enfipy/jsonrpc', rev = '4bca2c5186a873488d5fb989b28cb9c7225ec9c6' }
abci = { path = '../cosmos-abci/abci' }
