[package]
name = 'abci'
description = 'Cosmos ABCI library to communicate with Cosmos Applications'
edition = '2018'
version = '0.1.0'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = '0.2', features = ['rt-threaded', 'time', 'blocking'] }
tonic = { version = '0.3.0', features = ['tls'] }
prost = { version = '0.6' }
prost-types = '0.6'
lazy_static = '1.2.0'
owning_ref = '0.4.1'

[build-dependencies]
tonic-build = { version = '0.3.0', features = ['prost'] }
